rustdocs/errors/rust-bitcoin-p2p-src-bip152.rs.txt
error[E0433]: failed to resolve: unresolved import
 --> ../rust-bitcoin/p2p/src/bip152.rs:7:5
  |
7 | use alloc::vec::Vec;
  |     ^^^^^
  |     |
  |     unresolved import
  |     help: a similar path exists: `std::alloc`

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/p2p/src/bip152.rs:8:5
  |
8 | use core::convert::Infallible;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/p2p/src/bip152.rs:15:5
   |
15 | use bitcoin::consensus::encode::{self, Decodable, Encodable, ReadExt, Wr...
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
 7 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/p2p/src/bip152.rs:16:5
   |
16 | use bitcoin::transaction::TxIdentifier;
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
 7 + extern crate bitcoin;
   |

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/p2p/src/bip152.rs:9:5
  |
9 | use core::{convert, fmt, mem};
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `bitcoin`
  --> ../rust-bitcoin/p2p/src/bip152.rs:17:5
   |
17 | use bitcoin::{block, Block, BlockChecked, BlockHash, Transaction};
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
 7 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/p2p/src/bip152.rs:19:5
   |
19 | use internals::array::ArrayExt as _;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 7 + extern crate internals;
   |

error[E0432]: unresolved import `hashes`
  --> ../rust-bitcoin/p2p/src/bip152.rs:18:5
   |
18 | use hashes::{sha256, siphash24};
   |     ^^^^^^ use of unresolved module or unlinked crate `hashes`
   |
help: you might be missing a crate named `hashes`, add it to your project and import it in your code
   |
 7 + extern crate hashes;
   |

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/p2p/src/bip152.rs:20:5
   |
20 | use internals::ToU64 as _;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 7 + extern crate internals;
   |

error[E0432]: unresolved import `io`
  --> ../rust-bitcoin/p2p/src/bip152.rs:21:5
   |
21 | use io::{BufRead, Write};
   |     ^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::io`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
   --> ../rust-bitcoin/p2p/src/bip152.rs:100:1
    |
100 | internals::impl_array_newtype!(ShortId, u8, 6);
    | ^^^^^^^^^ use of unresolved module or unlinked crate `internals`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hex`
   --> ../rust-bitcoin/p2p/src/bip152.rs:140:9
    |
140 |         hex::display::fmt_hex_exact!(f, 6, &self.0, hex::Case::Lower)
    |         ^^^ use of unresolved module or unlinked crate `hex`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hex`
   --> ../rust-bitcoin/p2p/src/bip152.rs:146:9
    |
146 |         hex::display::fmt_hex_exact!(f, 6, &self.0, hex::Case::Upper)
    |         ^^^ use of unresolved module or unlinked crate `hex`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `consensus`
   --> ../rust-bitcoin/p2p/src/bip152.rs:411:8
    |
411 | crate::consensus::impl_consensus_encoding!(BlockTransactions, block_has...
    |        ^^^^^^^^^ use of unresolved module or unlinked crate `consensus`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
  --> ../rust-bitcoin/p2p/src/bip152.rs:80:79
   |
80 | ...t<usize, io::Error> {
   |             ^^ use of unresolved module or unlinked crate `io`
   |
   = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
   |
80 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
80 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
   |
help: consider importing this module
   |
 7 + use std::io;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/p2p/src/bip152.rs:164:79
    |
164 | ...t<usize, io::Error> {
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
164 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
164 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
    |
help: consider importing this module
    |
  7 + use std::io;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/p2p/src/bip152.rs:211:79
    |
211 | ...t<usize, io::Error> {
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
211 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
211 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
    |
help: consider importing this module
    |
  7 + use std::io;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/p2p/src/bip152.rs:319:79
    |
319 | ...t<usize, io::Error> {
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
319 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
319 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
    |
help: consider importing this module
    |
  7 + use std::io;
    |

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
